--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,11 @@
+theme: readthedocs
 site_name: Videonetics Analytics API
+nav:
+    - Home: 'index.md'
+    - 'API Guide':
+        - 'Submitting Task': 'submitting-task-docs.md'
+        - 'Task Status': 'task-status-docs.md'
+        - 'Event': 'event-docs.md'
+    - About:
+        - 'License': 'license.md'
+        - 'Release Notes': 'release-notes.md'
