submitting task restored

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,5 +6,5 @@ python:
     - requirements: docs/requirements.txt
 
 mkdocs:
-  configuration: mkdocs1.yml
+  configuration: mkdocs.yml
   fail_on_warning: false
